@@ -1,3 +1,8 @@
+Fri Sep 28 13:20:10 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (rb_io_getline_fast, rb_io_getline_1): set encoding to the
+	  result string, as well as getc.
+
 Fri Sep 28 12:51:42 2007  Koichi Sasada  <ko1@atdot.net>
 
 	* benchmark/bm_app_erb.rb: added.
